<resources>
    <string name="app_name">MediDoc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="head">MediDoc</string>
    <string name="rstpwtxt">Reset Your Password?</string>
    <string name="newpwtxt">Enter New password</string>
    <string name="conpasstxt">Confirm Password</string>
    <string name="reset">Reset Password</string>
    <string name="mailhint">Email</string>
    <string name="pwhint">password</string>
    <string name="lgin">Login</string>
    <string name="welcm">Welcome back to MediDoc!</string>
    <string name="regbtntxt">Register Now</string>
    <string name="forgtpwlink">Forgot Password?</string>
    <string name="crtacctxt">Create Account</string>
    <string name="nametxt">Enter Name</string>
    <string name="phntxt">Enter Phone Number</string>
    <string name="mailtxt">Enter email</string>
    <string name="pword">Enter Password</string>
    <string name="nictxt">Enter NIC Number</string>
    <string name="regtxt">Register Now</string>
    <string name="crtaccmsgtxt">Join with MediDoc!</string>
    <string name="updte">Update Profile</string>
    <string name="updteNow">Edit Now</string>
    <string name="welcome">Welcome to MediDoc</string>
    <string name="doc">Doctor Name</string>
    <string name="special">Specialization</string>
    <string name="hospital">Hospital</string>
    <string name="date">Date</string>
    <string name="ok">Submit</string>
    <string name="channel">Channel Your Doctor</string>
    <string name="channel_details">Channel Details</string>
    <string name="time">Time</string>
    <string name="price">Charge</string>
    <string name="confirm">Confirm</string>
    <string name="channel_num">Channel No</string>
    <string name="payment">Payment Details</string>
    <string name="card_num">Card Number</string>
    <string name="exp_date">Expiration Date</string>
    <string name="cv_code">CV Code</string>
    <string name="owner">Card Owner</string>
    <string name="pay">Process Payment</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="med_name">Name</string>
    <string name="med_no">Contact No</string>
    <string name="med_address">Address</string>
    <string name="med_notes">Notes</string>
    <string name="med_pre">Add Prescription</string>
    <string name="med_pic">Choose Prescription</string>
    <string name="med_btn">Submit</string>
    <string name="med">Medicine To DoorStep</string>
    <string name="med_list">My Orders</string>
    <string name="med_save">Save Changers</string>
    <string name="med_order_details">Order Details</string>
    <string name="med_order_update">Update</string>
    <string name="med_order_del">Delete</string>
    <string name="med_update_title">Update Your  Order</string>


</resources>
